--- a/style/style.css
+++ b/style/style.css
@@ -67,6 +67,21 @@ form
     margin-right: auto;
 }
 
+.khare_sir1{
+	display: block;
+    margin-right: auto;
+    width:610px;
+	height:300px;
+}
+.event1{
+	margin-right: auto;
+}
+.event2{
+	margin-right: auto;
+	width:300px;
+	height:200px;
+}
+
 .banerjee_sir{
 	display: block;
     margin-left: auto;
@@ -385,4 +400,59 @@ table tr td
   width: 33.3%;
   margin-bottom: 20px;
   padding: 0 10px;
+}
+
+
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.header {
+    text-align: center;
+    padding: 32px;
+}
+
+.row {
+    display: -ms-flexbox; /* IE 10 */
+    display: flex;
+    -ms-flex-wrap: wrap; /* IE 10 */
+    flex-wrap: wrap;
+    padding: 0 4px;
+}
+
+/* Create two equal columns that sits next to each other */
+.column1 {
+    -ms-flex: 50%; /* IE 10 */
+    flex: 50%;
+    padding: 0 4px;
+}
+
+.column1 img {
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+/* Style the buttons */
+.btn {
+    border: none;
+    outline: none;
+    padding: 10px 16px;
+    background-color: #f1f1f1;
+    cursor: pointer;
+    font-size: 18px;
+}
+
+.btn:hover {
+    background-color: #ddd;
+}
+
+.btn.active {
+    background-color: #666;
+    color: white;
 }
